# compv

./: README.md
3d-graphics/bezier/: bezier.py
3d-graphics/skybox/: convert.py  cubemap-cut.py
OpenSfM/opensfm/src/: CMakeLists.txt
deep-learning-nets/vision/papers/: README.md  README.md~
finger-tracker/FingerTracker/: README.txt
finger-tracker/FingerTracker/reference/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index-all.html  index.html  overview-tree.html
gesture/GstHanddetect/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  libtool
gesture/GstHanddetect/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
gesture/GstHanddetect/examples/: Makefile  Makefile.in
gesture/GstHanddetect/src/: Makefile  Makefile.in
gesture/HHParticleFilter/: CMakeLists.txt  CurveCSS.cpp  CurveSignature.cpp  CurveSignature.h  HPDM.h  HPDMTracker.h  main.cpp
gesture/grt/gui/: .README.md.swp
gesture/libhand-0.9/: README_NEW.txt
gesture/libhand-0.9/hand_matlab/: mex_compile.sh
gesture/libhand-samples/two_poses/: two_poses.m
gesture/papers/: Hand detection using multiple proposals.pptx
hand-tracker/kinect-hand-tracker/: Config.xml  ConvexHull.h  HandTracker.cpp  HandTracker.h  Makefile  NOTE  PointDrawer.cpp  PointDrawer.h  README  bit_vector.h  graphcut.cpp  graphcut.h  script_convert.sh  segment-image.h  signal_catch.cpp
machine-learning/CubicSplineDemo/: .gitignore  README.md
machine-learning/hmm/hmmlearn/: README.txt
machine-learning/kalman-filter/kalman-cpp/: kalman-test.cpp
machine-learning/particle-swarm-optimization/: Makefile  demo.c
opencv/calib3d/camera_calibration_fast/: chessboard.py
opencv/calib3d/real_time_pose_estimation/: .gitignore  CMakeLists.txt  CMakeLists.txt.orig
opencv/edge/: sobel.py  sobel.py~
opencv/learn/: .cproject  .project  CVGraphics.cpp  DetectRed.cpp  HandGestureSVM.cpp  HelloWorld.cpp  PSODemo.cpp  PolynomialFit.cpp  ShapeDetect.cpp  cpputils.hpp  main.cpp  subprograms.hpp
opencv/learn/Debug/: CVGraphics.d  CVProjects  DetectRed.d  HelloWorld.d  PSODemo.d  PolynomialFit.d  ShapeDetect.d  main.d  makefile  objects.mk  sources.mk  subdir.mk
opencv/learn/lib/: GraphUtils.cpp
opencv/learn/optimizer/: Optimizer.cpp  Optimizer.h  PSO.cpp  PSO.h
openni/NITE/: INSTALL_KEY.txt  nite-arm-extract.sh  nite-x64-extract.sh  nite-x86-extract.sh
rigid-body-tracker/octave/: TODO.txt  fa.m  get_camera.m  main.m  main_unmatched.m  match_cost.m  pdf_point_cloud_2d.m  pso3.m  pso3_v2.m  pso3func.m  pso_v2.m  rigid_body.m  rotate_x.m  rotate_y.m  rotate_z.m  saved_u.mat  solve_matched.m  solve_unmatched.m  translate.m
robot-os/arduino/Hercules_Motor_Driver-master/: Hercules.cpp  Hercules.h  Hercules_Stepper.h  README.md  seeed_pwm.cpp  seeed_pwm.h
robot-os/arduino/hercules/: .hercules.ino.swp  hercules.ino
robot-os/arduino/hercules-initial/: hercules-initial.ino
robot-os/arduino/hercules_arduino/: hercules_arduino.ino  hercules_ros.ino
robot-os/arduino/hercules_enc_setup/: hercules_enc_setup.ino
robot-os/arduino/hercules_pc_emu/: Makefile  hercules_pc_emu.cpp  hercules_pc_emu.cpp~
robot-os/arduino/hercules_ros/: hercules_ros.ino  (+1 more)
robot-os/pi/: README  download-rp2-ubuntu-14.sh
ros/hercules_base/: CMakeLists.txt  CMakeLists.txt~  DataEncoders.cpp  DataEncoders.h  package.xml
ros/hercules_base/config/: diagnostics.yaml
ros/hercules_base/include/hercules_base/: hercules_hardware.h  hercules_wilson_wrapper.h
ros/hercules_base/launch/: base.launch
ros/hercules_base/src/: .hercules_hardware.cpp.swp  Hercules.cpp  Hercules.cpp~  Hercules.h  Message.h  hercules_base.cpp  hercules_diagnostics.cpp  hercules_hardware.cpp  hercules_hardware.cpp~  hercules_wilson_wrapper.cpp  hercules_wilson_wrapper.cpp~
ros/hercules_base/src/libserial/: SerialStreamBuf.h
ros/hercules_base/src/msg/: DataDifferentialSpeed.cpp  DataDifferentialSpeed.cpp~  DataDifferentialSpeed.h  DataDifferentialSpeed.h~  DataEncoders.cpp  DataEncoders.cpp~  DataEncoders.h  Message.cpp  Message.h  MsgPipe.cpp  MsgQueue.h
ros/hercules_control/: CMakeLists.txt  package.xml
ros/hercules_control/config/: control.yaml~  localization.yaml~
ros/hercules_control/launch/: control.launch  teleop.launch
ros/hercules_description/: CMakeLists.txt  package.xml
ros/hercules_description/env-hooks/: 50.hercules_description.sh
ros/hercules_description/launch/: description.launch
ros/hercules_description/meshes/: .wheel.dae.swp
ros/hercules_description/urdf/: decorations.urdf.xacro  description.xacro  hercules.urdf.xacro  wheel.urdf.xacro
ros/hercules_description/urdf/accessories/: kinect_camera.urdf.xacro  sensor_arch.urdf.xacro  sick_lms100.urdf.xacro
ros/hercules_msgs/: CHANGELOG.rst  CHANGELOG.rst~  CMakeLists.txt  package.xml
ros/hercules_navigation/: CMakeLists.txt  package.xml
ros/hercules_navigation/launch/: amcl_demo.launch  exploration.launch  exploration_demo.launch  gmapping_demo.launch  move_base.launch  move_base_mapless_demo.launch
ros/hercules_odom/: CMakeLists.txt  package.xml
ros/launch/: base.launch
ros/rgbd_benchmark_tools/: LICENSE  mainpage.dox
ros/rgbdslam_v2-indigo/: CMakeLists.txt  CMakeLists.txt.orig  rosdep.yaml
ros/skeleton_markers/: CHANGELOG.rst  CMakeLists.txt  README.md  mainpage.dox  markers.rviz  markers_from_tf.rviz  package.xml
ros/skeleton_markers/launch/: markers.launch  markers_from_tf.launch  skeleton.launch
ros/skeleton_markers/nodes/: markers_from_openni_tracker.py  markers_from_skeleton_msg.py  markers_from_tf.py
ros/skeleton_markers/params/: SamplesConfig.xml  marker_params.yaml
ros/skeleton_markers/src/: KinectController.cpp  KinectController.h  KinectDisplay.cpp  KinectDisplay.h  skeleton_tracker.cpp
ros/src/: Hercules.cpp  Hercules.h~  Message.cpp  hercules_hardware.cpp  hercules_hardware.cpp~
stereo/: README.txt
stereo-video/StereoDisp/: PixelDisp.m  StereoDisp.m
stereo/StereoDisp/: READ_ME.txt  license.txt
stereo/disparity-cv/: Makefile  disparity  disparity.cpp
(+122 files in other folders)
