<?xml version="1.0"?>
<package>
  <name>hercules_description</name>
  <version>0.2.2</version>
  <description>Hercules URDF description</description>
  
  <maintainer email="danke.xie@gmail.com">Danke Xie</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>ur_description</run_depend>

  <export>
  </export>
</package>
