<?xml version="1.0"?>
<package>
  <name>hercules_navigation</name>
  <version>0.2.2</version>
  <description>Autonomous mapping and navigation demos for the Hercules</description>

  <maintainer email="danke.xie@gmail.com">Danke Xie</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>frontier_exploration</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
